@@ -324,6 +324,78 @@ name|api
 operator|.
 name|records
 operator|.
+name|ApplicationId
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|api
+operator|.
+name|records
+operator|.
+name|ContainerExitStatus
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|api
+operator|.
+name|records
+operator|.
+name|ContainerId
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|api
+operator|.
+name|records
+operator|.
+name|ContainerStatus
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|api
+operator|.
+name|records
+operator|.
 name|Priority
 import|;
 end_import
@@ -2417,6 +2489,124 @@ name|low
 argument_list|)
 operator|>
 literal|0
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testCreateAbnormalContainerStatus ()
+specifier|public
+name|void
+name|testCreateAbnormalContainerStatus
+parameter_list|()
+block|{
+name|ContainerStatus
+name|cd
+init|=
+name|SchedulerUtils
+operator|.
+name|createAbnormalContainerStatus
+argument_list|(
+name|ContainerId
+operator|.
+name|newInstance
+argument_list|(
+name|ApplicationAttemptId
+operator|.
+name|newInstance
+argument_list|(
+name|ApplicationId
+operator|.
+name|newInstance
+argument_list|(
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+argument_list|,
+literal|1
+argument_list|)
+argument_list|,
+literal|1
+argument_list|)
+argument_list|,
+literal|1
+argument_list|)
+argument_list|,
+literal|"x"
+argument_list|)
+decl_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+name|ContainerExitStatus
+operator|.
+name|ABORTED
+argument_list|,
+name|cd
+operator|.
+name|getExitStatus
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testCreatePreemptedContainerStatus ()
+specifier|public
+name|void
+name|testCreatePreemptedContainerStatus
+parameter_list|()
+block|{
+name|ContainerStatus
+name|cd
+init|=
+name|SchedulerUtils
+operator|.
+name|createPreemptedContainerStatus
+argument_list|(
+name|ContainerId
+operator|.
+name|newInstance
+argument_list|(
+name|ApplicationAttemptId
+operator|.
+name|newInstance
+argument_list|(
+name|ApplicationId
+operator|.
+name|newInstance
+argument_list|(
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+argument_list|,
+literal|1
+argument_list|)
+argument_list|,
+literal|1
+argument_list|)
+argument_list|,
+literal|1
+argument_list|)
+argument_list|,
+literal|"x"
+argument_list|)
+decl_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+name|ContainerExitStatus
+operator|.
+name|PREEMPTED
+argument_list|,
+name|cd
+operator|.
+name|getExitStatus
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
